bridge/base/solarops-api-deployment.yaml
#! solarops-api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: solarops-api
    namespace: solar-wind-ai-project
    labels:
        com.docker.compose.project: solar_wind_ai_project
        com.docker.compose.service: solarops-api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: solar_wind_ai_project
            com.docker.compose.service: solarops-api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: solar_wind_ai_project
                com.docker.compose.service: solarops-api
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: solarops-api
                  image: solar_wind_ai_project-solarops-api
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: solarops-a-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app-phase-4-mlops-logs
                      mountPath: /app/phase_4_mlops/logs
            volumes:
                - name: app-phase-4-mlops-logs
                  hostPath:
                    path: C:\Users\lalit\Desktop\solar_wind_ai_project\phase_4_mlops\logs
