bridge/base/solarops-api-service.yaml
# check if there is at least one published port

#! solarops-api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: solarops-api-published
    namespace: solar-wind-ai-project
    labels:
        com.docker.compose.project: solar_wind_ai_project
        com.docker.compose.service: solarops-api
spec:
    selector:
        com.docker.compose.project: solar_wind_ai_project
        com.docker.compose.service: solarops-api
    ports:
        - name: solarops-a-8000
          port: 8000
          protocol: TCP
          targetPort: solarops-a-8000
